# cnl

./: .appveyor.yml  .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis-setup-linux.sh  .travis-setup-osx.sh  .travis-setup.sh  .travis.yml  .uncrustify  CMakeLists.txt  CONTRIBUTING.md  README.md  __impl_2duplex__integer_2integer_8h_source.html  __impl_2duplex__integer_2numbers_8h_source.html  __impl_2duplex__integer_2rounding_8h_source.html  __impl_2elastic__integer_2integer_8h_source.html  __impl_2elastic__integer_2numbers_8h_source.html  __impl_2fixed__point_2fraction_8h_source.html  __impl_2fixed__point_2num__traits_8h_source.html  __impl_2fraction_2number_8h_source.html  __impl_2fraction_2numbers_8h_source.html  __impl_2num__traits_2rounding_8h_source.html  __impl_2rounding_8h.html  __impl_2rounding_8h_source.html  __impl_2scaled__integer_2fixed__point_8h_source.html  __impl_2scaled__integer_2integer_8h_source.html  __impl_2scaled__integer_2num__traits_8h.html  __impl_2scaled__integer_2num__traits_8h_source.html  __impl_2scaled__integer_2numbers_8h.html  __impl_2scaled__integer_2numbers_8h_source.html  __impl_2static__integer_8h_source.html  __impl_2wide__integer_2numbers_8h_source.html  __impl_2wrapper_2integer_8h_source.html  __impl_2wrapper_2numbers_8h_source.html  __impl_2wrapper_2rounding_8h_source.html  abort_8h_source.html  adopt_8h_source.html  (+583 more)
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  cnl.css  conf.py  elastic.md  generate  generate.sh  get_doxygen_tagfile.cmake  index.md  index.rst  p0037.md  p0037r0.md  p0037r1.md  p0037r2.md  p0037r3.md  p0381.md  p0381r0.md  p0381r1.md  p0554.md  p0675.md
doc/gh-pages/: annotated.html  classes.html  classsg14_1_1fixed__point-members.html  classsg14_1_1fixed__point.html  classstd_1_1enable__if_1_1type.html  doxygen.css  files.html  fixed__point_8h.html  fixed__point__utils_8h.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  hierarchy.html  index.html  namespacemembers.html  namespacemembers_type.html  namespacesg14.html  structsg14_1_1resize.html  structsg14_1_1resize_3_01fixed__point_3_01ReprType_00_01Exponent_01_4_00_01NumBytes_01_4-members.html  structsg14_1_1resize_3_01fixed__point_3_01ReprType_00_01Exponent_01_4_00_01NumBytes_01_4.html  structstd_1_1is__integral_3_01____int128_01_4.html  structstd_1_1is__integral_3_01unsigned_01____int128_01_4.html  structstd_1_1is__signed_3_01____int128_01_4.html  structstd_1_1is__signed_3_01unsigned_01____int128_01_4.html  structstd_1_1is__unsigned_3_01____int128_01_4.html  structstd_1_1is__unsigned_3_01unsigned_01____int128_01_4.html  structstd_1_1make__signed_3_01____int128_01_4-members.html  structstd_1_1make__signed_3_01____int128_01_4.html  structstd_1_1make__signed_3_01unsigned_01____int128_01_4-members.html  structstd_1_1make__signed_3_01unsigned_01____int128_01_4.html  structstd_1_1make__unsigned_3_01____int128_01_4-members.html  structstd_1_1make__unsigned_3_01____int128_01_4.html  structstd_1_1make__unsigned_3_01unsigned_01____int128_01_4-members.html  structstd_1_1make__unsigned_3_01unsigned_01____int128_01_4.html  structstd_1_1numeric__limits_3_01sg14_1_1fixed__point_3_01ReprType_00_01Exponent_01_4_01_4-members.html  structstd_1_1numeric__limits_3_01sg14_1_1fixed__point_3_01ReprType_00_01Exponent_01_4_01_4.html  tabs.css  type__traits_8h.html
doc/papers/: p0037.html  p0037.md
example/tau/: CMakeLists.txt  README.md  main.cpp
include/: CMakeLists.txt  cnl.h  elastic.h  fixed_point.h  fixed_point_utils.h  int128.h  integer.h  type_traits.h
include/bits/: common.h  fixed_point_extras.h  int128.h
include/cnl/: all.h  arithmetic.h  bit.h  cmath.h  cnlint.h  constant.h  cstdint.h  elastic_fixed_point.h  elastic_integer.h  elastic_number.h  elastic_scaled_integer.h  fixed_point.h  floating_point.h  fraction.h  fractional.h  integer.h  integral_constant.h  limits.h  math.h  multiword_integer.h  num_traits.h  number.h  numbers.h  numeric.h  numeric_limits.h  overflow.h  overflow_int.h  overflow_integer.h  precise_integer.h  rounding.h  rounding_integer.h  safe_integer.h  scaled_integer.h  static_integer.h  static_number.h  type_traits.h  wide_integer.h
include/dsp/: CMakeLists.txt  biquad.h  biquad_cascade.h  circular_buffer.h  complex.h  complex_vector.h  dsp_math.h  dsp_types.h  fft.h  stft.h  trig.h  virtual_float.h
include/sg14/: cstdint  elastic.h  fixed_point  fixed_point.h  limits  num_traits.h  numeric_traits  type_traits  type_traits.h
src/benchmark/: CMakeLists.txt  benchmark.cpp  report.py  review.py  sample_functions.h
src/test/: CMakeLists.txt  bit.cpp  boost.multiprecision.cpp  boost.simd.cpp  boost.throw_exception.h  cmath.cpp  cnlint.cpp  common.cpp  const_integer.cpp  constant.cpp  cppcon2017.cpp  cppnow2017.cpp  cstdint.cpp  elastic.cpp  elastic1.cpp  elastic2.cpp  elastic3.cpp  elastic4.cpp  elastic5.cpp  elastic6.cpp  elastic7.cpp  elastic8.cpp  elastic_common.h  elastic_fixed_point.cpp  elastic_fixed_point.h  elastic_integer.cpp  encompasses.cpp  fixed_point.cpp  fixed_point_built_in.cpp  fixed_point_common.h  fixed_point_const_integer.cpp  fixed_point_math.cpp  fixed_point_math_Q0.cpp  fixed_point_math_Q1.cpp  fixed_point_math_Q15.cpp  fixed_point_math_Q31.cpp  fixed_point_math_common.h  fixed_point_native_integer.cpp  fixed_point_safe_int.cpp  fixed_point_saturated_integer.cpp  (+45 more)
test/: CMakeLists.txt
test/benchmark/: CMakeLists.txt  benchmark.cpp  review.py  sample_functions.h
test/cmake/: common.cmake  install-conan.cmake
test/framework/: CMakeLists.txt  test.h
test/scripts/: benchmark  benchmark.sh  clang-format  clang-tidy  clang-tidy.sh  conan-setup  conan-setup.sh  doxygen.sh  init-build  init-build-clang  init-build-clang-libc++  init-build-clang-sanitize  init-build-clang-tidy  init-build-clang-tidy-libc++  init-build-gcc  init-build-gcc-armv7  init-build-gcc-sanitize  init-system  line-check.sh  lint  markdownlint  mdl.style  sanitize-clang  sanitize-clang.sh  sanitize-gcc  sanitize-gcc.sh  shellcheck  shellcheck.sh  test  test-all  test-all.sh  (+5 more)
(+1245 files in other folders)
